[gd_scene format=3 uid="uid://cyscttd02w5et"]

[ext_resource type="Script" uid="uid://c2c6vwus4gslu" path="res://game_board/group/group.gd" id="1_stacj"]
[ext_resource type="Script" uid="uid://dt3b1eef05xud" path="res://game_board/group/components/health.gd" id="2_n6t1d"]
[ext_resource type="Script" uid="uid://6fxxw0geavor" path="res://game_board/group/components/movement.gd" id="3_gab0b"]
[ext_resource type="Script" uid="uid://co601i3ip6tuv" path="res://game_board/group/components/attack.gd" id="4_fvt2d"]
[ext_resource type="Script" uid="uid://bp5hxsuhuvf16" path="res://game_board/group/components/vision.gd" id="6_wsly2"]
[ext_resource type="Script" uid="uid://buvta07u11ch" path="res://game_board/group/helpers/attack_animation.gd" id="7_hsmjr"]
[ext_resource type="Script" uid="uid://c3583watj5c3d" path="res://game_board/group/components/collision.gd" id="7_n6t1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6t1d"]
size = Vector2(116, 118)

[sub_resource type="CircleShape2D" id="CircleShape2D_sxw8s"]
radius = 291.08417

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmdm5"]
size = Vector2(80, 80)

[node name="Group" type="Node2D" unique_id=186043592]
script = ExtResource("1_stacj")

[node name="HealthComponent" type="Node" parent="." unique_id=795734082]
script = ExtResource("2_n6t1d")

[node name="MovementComponent" type="Node" parent="." unique_id=23351134]
script = ExtResource("3_gab0b")
speed = 120.0

[node name="AttackComponent" type="Area2D" parent="." unique_id=1790122325]
collision_layer = 0
script = ExtResource("4_fvt2d")
damage = 15
attack_cooldown = 1.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent" unique_id=384630568]
shape = SubResource("RectangleShape2D_n6t1d")
debug_color = Color(0.972549, 0, 0.44313726, 0.23529412)

[node name="AttackAnimation" type="Line2D" parent="AttackComponent" unique_id=1826900311]
default_color = Color(0.8291842, 0.38712272, 0.24854058, 1)
joint_mode = 1
script = ExtResource("7_hsmjr")

[node name="VisionComponent" type="Area2D" parent="." unique_id=1668338710]
collision_layer = 0
script = ExtResource("6_wsly2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionComponent" unique_id=730956291]
shape = SubResource("CircleShape2D_sxw8s")
debug_color = Color(0.27058825, 0.5019608, 1, 0.18039216)

[node name="CollisionComponent" type="Area2D" parent="." unique_id=326969400]
script = ExtResource("7_n6t1d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionComponent" unique_id=1589837708]
shape = SubResource("RectangleShape2D_dmdm5")

[node name="Sprite" type="Polygon2D" parent="." unique_id=294582724]
color = Color(0.8371849, 0.62610656, 0.29626012, 1)
polygon = PackedVector2Array(-30, -30, 30, -30, 30, 30, -30, 30)

[connection signal="area_entered" from="VisionComponent" to="VisionComponent" method="_on_area_entered"]
[connection signal="area_exited" from="VisionComponent" to="VisionComponent" method="_on_area_exited"]
[connection signal="area_entered" from="CollisionComponent" to="CollisionComponent" method="_on_area_entered"]
[connection signal="area_exited" from="CollisionComponent" to="CollisionComponent" method="_on_area_exited"]
